# scratchc

./: Cargo.toml  README.md  build.rs  support.rs
src/: compiler.rs  lib.rs  main.rs  scratch.rs  support.cc
test/: fib_10_recr.sb3  forever_hello.sb3  multiscript.sb3  stop_script.sb3  yes.sb3
tests/: out.rs
