[package]
name = "scratch2bin"
version = "0.1.0"
authors = ["snek"]
edition = "2018"

[dependencies]
zip = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
cranelift = "0.69"
cranelift-object = "0.69"
cranelift-module = "0.69"
cranelift-preopt = "0.69"
cranelift-native = "0.69"
